plugins {
    id 'org.springframework.boot' version '2.2.1.RELEASE'
    id 'java'
    id "nebula.facet" version "6.0.3"
}

apply plugin: 'io.spring.dependency-management'

group = 'com.afkl.cases.df'
version = '0.1.0'
sourceCompatibility = '11'

facets {
    integrationTest {
        parentSourceSet = 'main'
        testTaskName = 'integrationTest'
        includeInCheckLifecycle = true
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

test {
    useJUnitPlatform()
}

integrationTest {
    useJUnitPlatform()
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web") {
        exclude module: "spring-boot-starter-tomcat"
    }
    implementation("org.springframework.boot:spring-boot-starter-jetty")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-actuator")

    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")

    implementation("jakarta.xml.bind:jakarta.xml.bind-api:2.3.2")
    implementation("org.glassfish.jaxb:jaxb-runtime:2.3.2")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jdk8")
    implementation("javax.inject:javax.inject:1")
    compileOnly("org.projectlombok:lombok:1.18.10")
    annotationProcessor("org.projectlombok:lombok:1.18.10")

    implementation("com.google.guava:guava:28.1-jre")
    implementation("io.springfox:springfox-swagger2:2.9.2")
    implementation("io.springfox:springfox-swagger-ui:2.9.2")

    implementation("org.hibernate.validator:hibernate-validator:6.0.16.Final")
    runtime("com.h2database:h2:1.4.200")
    implementation 'org.apache.httpcomponents:httpclient:4.5.10'

    testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.1")
    testImplementation("org.json:json:20180813")
    testImplementation("nl.jqno.equalsverifier:equalsverifier:3.1.9")
    testImplementation("org.mockito:mockito-junit-jupiter:3.0.0")
    testImplementation("org.mockito:mockito-core")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.5.1")

    integrationTestImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
        exclude group: 'junit', module: 'junit'
    }
    integrationTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
    integrationTestImplementation "com.github.tomakehurst:wiremock-jre8:2.25.1"
    integrationTestRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
}
